2006-08-22  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-message-node.c: (lm_message_node_to_string):
	- Add a check that node isn't NULL.

2006-08-04  Mikael Hallendal  <micke@imendio.com>

	* acinclude.m4: 
	- Fix a auto* warning.
	- Fixes LM-46.

2006-08-03  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-sha.c: 
	- Make the sha functions static so they are not exposed to 
	  apps/libraries using loudmout.
	- Fixes LM-47.

2006-08-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-gnutls.c: (_lm_ssl_read):
	- EOF on 0 bytes read.
	- Fixes LM-45.

2006-06-27  Mikael Hallendal  <micke@imendio.com>

	* Release 1.1.2

	* configure.ac: 
	- Bumped to 1.1.2
	* NEWS:
	- Added news about 1.1.2

2006-06-25  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_close):
	- Patch from Martyn Russel
	- Make sure that disconnect is signalled if the connection is closed
	  during opening phase.
	- Fixes LM-43

2006-06-16  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* loudmouth-1.0.pc.in:
	* loudmouth/Makefile.am:
	- Add checks for libidn.
	* loudmouth/lm-connection.c: (lm_connection_new),
	(lm_connection_set_server):
	* loudmouth/lm-proxy.c: (lm_proxy_set_server):
	- Use the new function _lm_utils_hostname_to_punycode.
	* loudmouth/lm-internals.h:
	* loudmouth/lm-utils.c: (_lm_utils_hostname_to_punycode):
	- Added function to support internationalised host names.
	- Patch from Frederic Peters.
	- Fixes LM-42.

2006-06-06  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Call lm_parser_free to actually free it.
	* loudmouth/lm-parser.c: (lm_parser_free):
	- Free up memory used by the parser.
	- Fixes LM-39

2006-05-27  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-gnutls.c: (ssl_verify_certificate):
	- Fixed an error with an uninitialized value.
	- Fixes LM-35.

2006-05-26  Mikael Hallendal  <micke@imendio.com>
